2005-07-19  Mark Mitchell  <mark@codesourcery.com>

	Revert:
	2005-07-19  Mark Mitchell  <mark@codesourcery.com>
	* qm/test/doc/manual.xml: Use DocBook 4.2.

	* qm/test/doc/manual.xml: Use DocBook 4.2.
	* qmdist/command/build_doc.py (find_file): Remove.
	(build_doc.user_options): New variable.
	(build_doc.xml_dcl_paths): Likewise.
	(build_doc.dtd_dirs): Likewise.
	(build_doc.stylesheet_dirs): Likewise.
	(build_doc.initialize_options): New function.
	(build_doc.finalize_options): Likewise.
	(build_doc.call_jade): Remove dcl parameter.  Use Jade options
	provided by the user.
	(build_doc.run): Honor user direction regarding what
	documentation to build.
	(build_doc.find_file): New function.
	
	* qm/test/classes/command.py (ShellScriptTest._GetShell): New
	function.
	(ShellScriptTest.Run): Use it.

	* qm/test/file_database.py: Fix typo in documentation.

2005-07-06  Stefan Seefeld  <stefan@codesourcery.com>

	* NEWS: Report improvements in version 2.3. 

2005-07-05  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Fix typo.

2005-06-23  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/share/xml/report.xslt: New stylesheet to generate html reports.
	* setup.py: Fix installation paths.

	* qm/__version.py: Increment version_info to (2,3,0).

	* qm/test/cmdline.py: Enhance documentation for 'report' command.
	* qm/test/file_database.py: Fix typos.
	* qm/test/result_stream.py: Remove obsolete comment.
	* qm/test/doc/reference.xml: Document 'report' command.
	* qm/test/web/web.py: Fix incorrect documentation strings.

2005-06-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/remote_host.py: Rename to ...
	* qm/host.py: ... this.  Replace "RemoteHost" with "Host"
	throughout.
	* qm/test/base.py: Adjust accordingly.
	* qm/test/classes/classes.qmc: Likewise.
	* qm/test/classes/compiler_table.py: Likewise.
	* qm/test/classes/local_host.py: Likewise.

2005-06-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/remote_host.py: New file.